Updated the universe package json.

--- a/frameworks/prometheus/universe/package.json
+++ b/frameworks/prometheus/universe/package.json
@@ -3,11 +3,11 @@
   "minDcosReleaseVersion": "1.9",
   "name": "prometheus",
   "version": "{{package-version}}",
-  "maintainer": "support@YOURNAMEHERE.COM",
-  "description": "YOURNAMEHERE on DC/OS",
+  "maintainer": "support@mesosphere.com",
+  "description": "Prometheus on DC/OS",
   "selected": false,
   "framework": true,
   "tags": ["prometheus"],
-  "postInstallNotes": "DC/OS YOURNAMEHERE is being installed!\n\n\tDocumentation: http://YOURNAMEHERE.COM/DOCS\n\tIssues: http://YOURNAMEHERE.COM/SUPPORT",
-  "postUninstallNotes": "DC/OS YOURNAMEHERE has been uninstalled."
+  "postInstallNotes": "DC/OS Prometheus is being installed!\n\n\tDocumentation: http://YOURNAMEHERE.COM/DOCS\n\tIssues: http://YOURNAMEHERE.COM/SUPPORT",
+  "postUninstallNotes": "DC/OS Prometheus has been uninstalled."
 }
