--- a/frameworks/prometheus/universe/package.json
+++ b/frameworks/prometheus/universe/package.json
@@ -8,6 +8,6 @@
   "selected": false,
   "framework": true,
   "tags": ["prometheus"],
-  "postInstallNotes": "DC/OS Prometheus is being installed!\n\n\tDocumentation: http://YOURNAMEHERE.COM/DOCS\n\tIssues: http://YOURNAMEHERE.COM/SUPPORT",
+  "postInstallNotes": "DC/OS Prometheus is being installed!",
   "postUninstallNotes": "DC/OS Prometheus has been uninstalled."
 }
